--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
   mysql:
     image: mysql
     env_file:
-      - .env
+      - .flaskenv
     ports:
       - '3306:3306'
     restart: always
