--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
+alembic==1.13.1
 apispec==6.3.1
 blinker==1.7.0
+cffi==1.16.0
 click==8.1.7
+cryptography==3.4.8
 Flask==3.0.0
 Flask-DotEnv==0.1.2
+Flask-Migrate==4.0.5
 flask-smorest==0.42.3
 Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
 gunicorn==21.2.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.3.0
 MarkupSafe==2.1.3
 marshmallow==3.20.1
 packaging==23.2
+pycparser==2.21
 PyMySQL==1.1.0
 SQLAlchemy==2.0.23
 typing_extensions==4.9.0
