--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.1.7
 cryptography==3.4.8
 Flask==3.0.0
 Flask-DotEnv==0.1.2
+Flask-JWT-Extended==4.6.0
 Flask-Migrate==4.0.5
 flask-smorest==0.42.3
 Flask-SQLAlchemy==3.1.1
@@ -18,6 +19,7 @@ MarkupSafe==2.1.3
 marshmallow==3.20.1
 packaging==23.2
 pycparser==2.21
+PyJWT==2.8.0
 PyMySQL==1.1.0
 SQLAlchemy==2.0.23
 typing_extensions==4.9.0
