--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ packaging==23.2
 pycparser==2.21
 PyJWT==2.8.0
 PyMySQL==1.1.0
+passlib==1.7.4
 SQLAlchemy==2.0.23
 typing_extensions==4.9.0
 webargs==8.3.0
